<resources>
    <string name="app_name">SharedPreference</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_description">Image avartar</string>
    <string name="text_btn_des">Add new user</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="text_btn_add">Add</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_user_info">User Information</string>
    <string name="des_option">Option menu</string>
    <string name="menu_update">Update</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="text_confirm_delete">Do you want to delete this user?</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_btn_update">Update</string>
    <string name="text_menu_item_detail">Detail</string>
    <string name="text_label_name">Name:</string>
    <string name="text_label_email">Email:</string>
    <string name="btn_ok">OK</string>
    <string name="text_confirm_update">Do you confirm to update?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>